manifests/litellm/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: litellm
  labels:
    name: litellm
