manifests/litellm/ingress.yml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: litellm-ingress
  namespace: litellm
spec:
  rules:
    - host: litellm.local
      http:
        paths:
          - path: /
            pathType:
            backend:
              service:
                name: litellm-service
                port:
                  number: 80
---
